# helene

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  publish-crate.yml  release.yml  tag-release.yml  update-release-notes.yml
docs/adr/: 001-hmac-over-reply-validation.md  002-length-prefixed-serialization.md  003-rpitit-over-async-fn.md  004-no-non-exhaustive-in-0x.md  005-squash-only-merge-strategy.md  006-dione-shared-types.md
docs/design/: architecture.md
helene-parser/: Cargo.toml
helene-parser/src/: lib.rs
src/: lib.rs
src/context/: mod.rs  tests.rs  types.rs
src/provider/: anthropic.rs  mod.rs  tests.rs  types.rs
src/session/: host.rs  mod.rs  tests.rs  types.rs
src/transport/: http.rs  mock.rs  mod.rs  tests.rs  types.rs
src/verify/: hmac_verifier.rs  mod.rs  tests.rs  types.rs
