[package]
name = "helene"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Provider-agnostic inference harness. Co-orbital with Dione."
repository = "https://github.com/butterflyskies/helene"
readme = "README.md"
keywords = ["mcp", "inference", "harness", "llm"]
categories = ["api-bindings"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
thiserror = "2"

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
