[package]
name = "helene"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Provider-agnostic inference harness. Co-orbital with Dione."
repository = "https://github.com/butterflyskies/helene"
readme = "README.md"
keywords = ["mcp", "inference", "harness", "llm"]
categories = ["api-bindings"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
